--- a/Ambermoon.net/Ambermoon.net.csproj
+++ b/Ambermoon.net/Ambermoon.net.csproj
@@ -47,6 +47,21 @@
     <None Remove="Resources\logo.pyr" />
     <None Remove="Resources\song.pyr" />
     <None Remove="Resources\windowIcon.png" />
+    <None Remove="x64\api-ms-win-core-winrt-l1-1-0.dll" />
+    <None Remove="x86\api-ms-win-core-winrt-l1-1-0.dll" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Platform)'!='x86'">
+    <ContentWithTargetPath Include="x64\api-ms-win-core-winrt-l1-1-0.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  <TargetPath>api-ms-win-core-winrt-l1-1-0.dll</TargetPath>
+    </ContentWithTargetPath>
+  </ItemGroup>
+  <ItemGroup Condition="'$(Platform)'=='x86'">
+    <ContentWithTargetPath Include="x86\api-ms-win-core-winrt-l1-1-0.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  <TargetPath>api-ms-win-core-winrt-l1-1-0.dll</TargetPath>
+    </ContentWithTargetPath>
   </ItemGroup>
 
   <ItemGroup>
@@ -75,14 +90,6 @@
     <PackageReference Include="Silk.NET.Input" Version="2.11.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.11.0" />
     <PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(Platform)'=='x86'">
-	<PackageReference Include="runtime.win7-x86.Microsoft.NETCore.Windows.ApiSets" Version="1.0.1" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(Platform)'!='x86'">
-    <PackageReference Include="runtime.win7-x64.Microsoft.NETCore.Windows.ApiSets" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
