--- a/appveyor.yml
+++ b/appveyor.yml
@@ -65,6 +65,32 @@ deploy:
     on:
       APPVEYOR_REPO_TAG: true
   - provider: GitHub
+    name: Ambermoon.net-Windows7
+    artifact: Ambermoon.net-Windows7
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
+    auth_token:
+      secure: ku89dMTVkz+PE5bvxWQCLG9PbNTa9tQUsidZ/7726rLEZjIAvDcxEC668Ix9zYmw
+    draft: true
+    prerelease: true
+    force_update: true
+    on:
+      APPVEYOR_REPO_TAG: true
+  - provider: GitHub
+    name: Ambermoon.net-Windows7-32Bit
+    artifact: Ambermoon.net-Windows7-32Bit
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
+    auth_token:
+      secure: ku89dMTVkz+PE5bvxWQCLG9PbNTa9tQUsidZ/7726rLEZjIAvDcxEC668Ix9zYmw
+    draft: true
+    prerelease: true
+    force_update: true
+    on:
+      APPVEYOR_REPO_TAG: true
+  - provider: GitHub
     name: Ambermoon.net-Linux
     artifact: Ambermoon.net-Linux
     tag: $(APPVEYOR_REPO_TAG_NAME)
