--- a/Ambermoon.Data.Legacy/Ambermoon.Data.Legacy.csproj
+++ b/Ambermoon.Data.Legacy/Ambermoon.Data.Legacy.csproj
@@ -11,9 +11,14 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>10.4.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Configurations>Debug;Release;DebugAndroid</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
