--- a/Ambermoon.Core/Ambermoon.Core.csproj
+++ b/Ambermoon.Core/Ambermoon.Core.csproj
@@ -11,8 +11,15 @@
     <RepositoryType>Github</RepositoryType>
     <Description>Core of the Ambermoon rework</Description>
     <DebugType>portable</DebugType>
+    <Configurations>Debug;Release;DebugAndroid</Configurations>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>portable</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
