--- a/Ambermoon.Data.Common/Ambermoon.Data.Common.csproj
+++ b/Ambermoon.Data.Common/Ambermoon.Data.Common.csproj
@@ -12,6 +12,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>10.4.0</Version>
     <UserSecretsId>485e4790-32fd-45f1-b729-c5ca93ba0fad</UserSecretsId>
+    <Configurations>Debug;Release;DebugAndroid</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
