--- a/Ambermoon.PrepareIcons/Ambermoon.PrepareIcons.csproj
+++ b/Ambermoon.PrepareIcons/Ambermoon.PrepareIcons.csproj
@@ -6,6 +6,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Authors>Robert Schneckenhaus</Authors>
     <Copyright>Copyright (C) 2021 by Robert Schneckenhaus</Copyright>
+    <Configurations>Debug;Release;DebugAndroid</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
