--- a/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
+++ b/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
@@ -2,9 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Configurations>Debug;Release;DebugAndroid;ReleaseWithAndroid</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
@@ -21,25 +26,42 @@
 
   <ItemGroup>
     <PackageReference Include="Ambermoon.Data.Common" Version="10.4.0" />
-    <PackageReference Include="Silk.NET.OpenGLES" Version="2.11.0" />
+    <PackageReference Include="Silk.NET.OpenGLES" Version="2.13.0" />
   </ItemGroup>
 
-  <PropertyGroup>
-    <DefineConstants Condition=" '$(UseGLES)' == 'true' ">$(DefineConstants);GLES</DefineConstants>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
+	<DefineConstants>$(DefineConstants);GLES</DefineConstants>
   </PropertyGroup>
 
-  <Choose>
-    <When Condition=" '$(UseGLES)' == 'true' ">
-      <ItemGroup>
-        <PackageReference Include="Silk.NET.OpenGLES" Version="2.11.0" />
-      </ItemGroup>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <PackageReference Include="Silk.NET.OpenGL" Version="2.11.0" />
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseWithAndroid|AnyCPU'">
+	<DefineConstants>$(DefineConstants);GLES</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
+	<PackageReference Include="Silk.NET.OpenGLES" Version="2.13.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseWithAndroid|AnyCPU'">
+	<PackageReference Include="Silk.NET.OpenGLES" Version="2.13.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	<PackageReference Include="Silk.NET.OpenGL" Version="2.13.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseWithAndroid|AnyCPU'">
+    <PackageReference Include="Silk.NET.OpenGL">
+      <Version>2.13.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	<PackageReference Include="Silk.NET.OpenGL" Version="2.13.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseMac|AnyCPU'">
+	<PackageReference Include="Silk.NET.OpenGL" Version="2.13.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Ambermoon.Core\Ambermoon.Core.csproj" />
