--- a/AmbermoonAndroid/AndroidManifest.xml
+++ b/AmbermoonAndroid/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="internalOnly">
 	<uses-feature android:glEsVersion="0x00030000" android:required="true" />
+	<uses-configuration android:reqTouchScreen="finger" />
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true"></application>
 	<uses-sdk android:minSdkVersion="29" android:targetSdkVersion="31" />
 </manifest>
