--- a/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
+++ b/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
@@ -2,15 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Configurations>Debug;Release;DebugAndroid;ReleaseWithAndroid</Configurations>
+    <Configurations>Debug;Release;DebugAndroid;ReleaseWithAndroid;ReleaseMac</Configurations>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+    <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  <PropertyGroup Condition="'$(Configuration)'=='DebugAndroid'">
+    <DefineConstants>$(DefineConstants);DEBUG;TRACE;GLES</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='ReleaseWithAndroid'">
+	<DefineConstants>$(DefineConstants);GLES</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -26,40 +30,25 @@
 
   <ItemGroup>
     <PackageReference Include="Ambermoon.Data.Common" Version="10.4.0" />
-    <PackageReference Include="Silk.NET.OpenGLES" Version="2.13.0" />
   </ItemGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
-	<DefineConstants>$(DefineConstants);GLES</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseWithAndroid|AnyCPU'">
-	<DefineConstants>$(DefineConstants);GLES</DefineConstants>
-  </PropertyGroup>
-
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='DebugAndroid|AnyCPU'">
+  <ItemGroup Condition="'$(Configuration)'=='DebugAndroid'">
 	<PackageReference Include="Silk.NET.OpenGLES" Version="2.13.0" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseWithAndroid|AnyCPU'">
+  <ItemGroup Condition="'$(Configuration)'=='ReleaseWithAndroid'">
 	<PackageReference Include="Silk.NET.OpenGLES" Version="2.13.0" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+  <ItemGroup Condition="'$(Configuration)'=='Release'">
 	<PackageReference Include="Silk.NET.OpenGL" Version="2.13.0" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseWithAndroid|AnyCPU'">
-    <PackageReference Include="Silk.NET.OpenGL">
-      <Version>2.13.0</Version>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <ItemGroup Condition="'$(Configuration)'=='Debug'">
 	<PackageReference Include="Silk.NET.OpenGL" Version="2.13.0" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseMac|AnyCPU'">
+  <ItemGroup Condition="'$(Configuration)'=='ReleaseMac'">
 	<PackageReference Include="Silk.NET.OpenGL" Version="2.13.0" />
   </ItemGroup>
 
