--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
       configuration: Release
     - APPVEYOR_BUILD_WORKER_IMAGE: macOS
-      configuration: ReleaseMac
+      configuration: Release
 
 platform: Any CPU
 
