--- a/Ambermoon.net/Ambermoon.net.csproj
+++ b/Ambermoon.net/Ambermoon.net.csproj
@@ -16,6 +16,7 @@
     <Description>Rework of the Amiga game Ambermoon</Description>
     <ApplicationIcon>app.ico</ApplicationIcon>
     <Configurations>Debug;Release;DebugAndroid;ReleaseNative;ReleaseNative</Configurations>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 	
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -81,9 +82,8 @@
   <ItemGroup>
     <PackageReference Include="Ambermoon.Data.Legacy" Version="10.5.0" />
     <PackageReference Include="glfw" Version="3.3.6" />
-    <PackageReference Include="NAudio.Core" Version="2.0.0" />
-    <PackageReference Include="NAudio.WinMM" Version="2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NLayer" Version="1.14.0" />
     <PackageReference Include="Silk.NET.GLFW" Version="2.13.0" />
     <PackageReference Include="Silk.NET.Input" Version="2.13.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.13.0" />
