Reverted build script to correct one

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,10 @@ environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
       configuration: Release
-    #- APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
-    #  configuration: Release
-    #- APPVEYOR_BUILD_WORKER_IMAGE: macOS
-    #  configuration: Release
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+      configuration: Release
+    - APPVEYOR_BUILD_WORKER_IMAGE: macOS
+      configuration: Release
 
 platform: Any CPU
 
