--- a/Ambermoon.Data.FileSystems/Ambermoon.Data.FileSystems.csproj
+++ b/Ambermoon.Data.FileSystems/Ambermoon.Data.FileSystems.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>disable</Nullable>
 	<Authors>Robert Schneckenhaus</Authors>
 	<Description>Library that provides file system abstraction for Ambermoon.</Description>
@@ -10,7 +10,7 @@
 	<RepositoryType>Github</RepositoryType>
 	<PackageTags>Ambermoon</PackageTags>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>10.6.2</Version>
+	<Version>10.6.3</Version>
 	<UserSecretsId>485e4790-32fd-45f1-b729-c5ca93ba0fad</UserSecretsId>
 	<Configurations>Debug;Release;DebugAndroid</Configurations>
   </PropertyGroup>
