--- a/Ambermoon.Data.Legacy/Ambermoon.Data.Legacy.csproj
+++ b/Ambermoon.Data.Legacy/Ambermoon.Data.Legacy.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+	<Nullable>disable</Nullable>
     <Authors>Robert Schneckenhaus</Authors>
     <Description>Library to load and process legacy data from the Amiga game Ambermoon.</Description>
     <PackageProjectUrl>https://github.com/Pyrdacor/Ambermoon.net</PackageProjectUrl>
@@ -9,7 +10,7 @@
     <RepositoryType>Github</RepositoryType>
     <PackageTags>Ambermoon Legacy Amiga Game Data</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>10.6.8</Version>
+    <Version>10.6.9</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Configurations>Debug;Release;DebugAndroid</Configurations>
   </PropertyGroup>
@@ -24,7 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ambermoon.Data.Common" Version="10.6.6" />
-    <PackageReference Include="SonicArranger" Version="1.0.8" />
+    <PackageReference Include="SonicArranger" Version="1.0.9" />
   </ItemGroup>
 
   <ItemGroup>
