--- a/Ambermoon.ConcatFiles/Ambermoon.ConcatFiles.csproj
+++ b/Ambermoon.ConcatFiles/Ambermoon.ConcatFiles.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RuntimeIdentifiers>win-x86;win-x64;linux-x64;linux-arm64;osx-x64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x86;win-x64;linux-x64;linux-arm64;osx-x64;osx.12-arm64</RuntimeIdentifiers>
     <Copyright>Copyright (C) 2021 by Robert Schneckenhaus</Copyright>
     <Company>Robert Schneckenhaus</Company>
     <Authors>Robert Schneckenhaus</Authors>
