--- a/Ambermoon.ConcatFiles/Ambermoon.ConcatFiles.csproj
+++ b/Ambermoon.ConcatFiles/Ambermoon.ConcatFiles.csproj
@@ -1,13 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RuntimeIdentifiers>win-x86;win-x64;linux-x64;linux-arm64;osx-x64</RuntimeIdentifiers>
+    <TargetFramework>net6.0</TargetFramework>
+    <RuntimeIdentifiers>win-x86;win-x64;linux-x64;linux-arm64;osx-x64;osx-arm64</RuntimeIdentifiers>
     <Copyright>Copyright (C) 2021 by Robert Schneckenhaus</Copyright>
     <Company>Robert Schneckenhaus</Company>
     <Authors>Robert Schneckenhaus</Authors>
     <Configurations>Debug;Release;DebugAndroid</Configurations>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AmbermoonAdditionalDataLoader\AmbermoonAdditionalDataLoader.csproj" />
+  </ItemGroup>
 
 </Project>
