--- a/Ambermoon.net/Ambermoon.net.csproj
+++ b/Ambermoon.net/Ambermoon.net.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Ambermoon</RootNamespace>
     <RuntimeIdentifiers>win-x86;win-x64;linux-x64;linux-arm64;osx-x64;osx-arm64</RuntimeIdentifiers>
-    <Version>1.6.7</Version>
+    <Version>1.6.8</Version>
     <Copyright>Copyright (C) 2020-2021 by Robert Schneckenhaus</Copyright>
     <Company>Robert Schneckenhaus</Company>
     <Authors>Robert Schneckenhaus</Authors>
@@ -98,6 +98,8 @@
     <ProjectReference Include="..\Ambermoon.Core\Ambermoon.Core.csproj" />
     <ProjectReference Include="..\Ambermoon.Data.Legacy\Ambermoon.Data.Legacy.csproj" />
     <ProjectReference Include="..\Ambermoon.Renderer.OpenGL\Ambermoon.Renderer.OpenGL.csproj" />
+    <ProjectReference Include="..\AmbermoonAdditionalDataLoader\AmbermoonAdditionalDataLoader.csproj" />
+    <ProjectReference Include="..\AmbermoonPatcher\AmbermoonPatcher.csproj" />
   </ItemGroup>
 
   <ItemGroup>
