This is really 1.6.8

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,8 @@ environment:
       configuration: Release
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
       configuration: Release
-    #- APPVEYOR_BUILD_WORKER_IMAGE: macos-monterey
-    #  configuration: Release
+    - APPVEYOR_BUILD_WORKER_IMAGE: macos-monterey
+      configuration: Release
 
 platform: Any CPU
 
