--- a/Ambermoon.Data.Common/Ambermoon.Data.Common.csproj
+++ b/Ambermoon.Data.Common/Ambermoon.Data.Common.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Ambermoon.Data</RootNamespace>
     <Authors>Robert Schneckenhaus</Authors>
     <Description>Library that provides basic interfaces for Ambermoon data. It is used by the Ambermoon.Data.Legacy package but can also be used by other abstractions to provide the data from different sources and data types.</Description>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ambermoon.Common\Ambermoon.Common.csproj" />
+    <ProjectReference Include="..\AmbermoonSerialize\AmbermoonSerialize.csproj" />
   </ItemGroup>
 
 </Project>
