Renamed config ReleaseWithAndroid to ReleaseAndroid
- Also cleanup in Ambermoon.net.csproj (formatting and spacing)

--- a/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
+++ b/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Configurations>Debug;Release;DebugAndroid;ReleaseWithAndroid</Configurations>
+    <Configurations>Debug;Release;DebugAndroid;ReleaseAndroid</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -13,7 +13,7 @@
     <DefineConstants>$(DefineConstants);DEBUG;TRACE;GLES</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)'=='ReleaseWithAndroid'">
+  <PropertyGroup Condition="'$(Configuration)'=='ReleaseAndroid'">
 	<DefineConstants>$(DefineConstants);GLES</DefineConstants>
   </PropertyGroup>
 
@@ -32,7 +32,7 @@
 	<PackageReference Include="Silk.NET.OpenGLES" Version="2.15.0" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Configuration)'=='ReleaseWithAndroid'">
+  <ItemGroup Condition="'$(Configuration)'=='ReleaseAndroid'">
 	<PackageReference Include="Silk.NET.OpenGLES" Version="2.16.0" />
   </ItemGroup>
 
