Change all remaining instances of ReleaseWithAndroid to ReleaseAndroid

--- a/Ambermoon.Audio.Android/Ambermoon.Audio.Android.csproj
+++ b/Ambermoon.Audio.Android/Ambermoon.Audio.Android.csproj
@@ -5,7 +5,7 @@
 	  <SupportedOSPlatformVersion>30</SupportedOSPlatformVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;DebugAndroid;ReleaseWithAndroid</Configurations>
+    <Configurations>Debug;Release;DebugAndroid;ReleaseAndroid</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
